remove open in new tab links and fix z-index for thumbs in table

--- a/metsis/metsis_lib/css/map_thumbnails.css
+++ b/metsis/metsis_lib/css/map_thumbnails.css
@@ -24,8 +24,8 @@
 }
 .overlay_image{
 
-    z-index: 15;
-    /*    z-index: 9;*/
+    /* z-index: 15;*/
+    z-index: 9;
 
 }
 
